create endpoint print label
